@@ -69,7 +69,10 @@ class LengowController
         $this->context->smarty->assign('current_controller', get_class($this));
         $this->context->smarty->assign('lengow_configuration', new LengowConfiguration());
         $this->context->smarty->assign('locale', new LengowTranslation());
-        $this->context->smarty->assign('localeIsoCode', Context::getContext()->language->iso_code);
+        $this->context->smarty->assign(
+            'localeIsoCode',
+            Tools::substr(Context::getContext()->language->language_code, 0, 2)
+        );
         $this->context->smarty->assign('lengowVersion', $this->module->version);
         $this->isNewMerchant = LengowConnector::isNewMerchant();
         $this->context->smarty->assign('isNewMerchant', $this->isNewMerchant);
