@@ -48,7 +48,7 @@
                 syncIframe.src = '//cms.lengow.rec/';
                 // syncIframe.src = '//cms.lengow.dev/';
             }
-            syncIframe.src = syncIframe.src+'?lang='+isoCode;
+            syncIframe.src = syncIframe.src+'?lang='+isoCode+'&clientType=prestashop';
             $('#frame_loader').hide();
             $('#lengow_iframe').show();
         }
